force-app/main/default/objects/Trainer__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yoga</fullName>
            </value>
            <value>
                <fullName>HIIT</fullName>
            </value>
            <value>
                <fullName>Strength</fullName>
            </value>
            <value>
                <fullName>Spin</fullName>
            </value>
            <value>
                <fullName>Pilates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>