force-app/main/default/objects/Trainer__c/fields/Trainer_User__c.field-meta.xml
<CustomField>
    <fullName>Trainer_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Trainers</relationshipName>
    <type>Lookup</type>
</CustomField>